--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "Brian Bleakley",
   "license": "ISC",
   "dependencies": {
-    "rot-js": "^2.1.1",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "poker-ranking": "^1.1.3",
+    "rot-js": "^2.1.1"
   },
   "devDependencies": {
     "webpack": "^4.41.5",
