--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open --entry ./src/app.js --output ./bundle.js",
-    "build": "webpack --mode development --entry ./src/app.js --output ./bundle.js"
+    "build": "webpack --mode production --entry ./src/app.js --output ./bundle.js"
   },
   "author": "Brian Bleakley",
   "license": "ISC",
